@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: iTermController.m,v 1.21 2003-09-26 15:55:30 ujwal Exp $
+// $Id: iTermController.m,v 1.22 2003-09-30 06:51:08 ujwal Exp $
 /*
  **  iTermController.m
  **
@@ -46,6 +46,8 @@ static NSString *SUPPORT_DIRECTORY = @"~/Library/Application Support/iTerm";
 static NSStringEncoding const *encodingList=nil;
 
 static BOOL usingAutoLaunchScript = NO;
+
+static NSTimer *timer;
 
 @implementation iTermController
 
@@ -177,6 +179,13 @@ static BOOL usingAutoLaunchScript = NO;
     
     encodingList=[NSString availableStringEncodings];
     terminalWindows = [[NSMutableArray alloc] init];
+
+    // start a common timer for all the periodic timer code for all sessions
+    timer =[[NSTimer scheduledTimerWithTimeInterval:0.02
+                                             target:self
+                                           selector:@selector(timerTick:)
+                                           userInfo:nil
+                                            repeats:YES] retain];
     
     return (self);
 }
@@ -190,8 +199,29 @@ static BOOL usingAutoLaunchScript = NO;
     
     [terminalWindows removeAllObjects];
     [terminalWindows release];
+
+    [timer invalidate];
+    [timer release];
     
     [super dealloc];
+}
+
+- (void) timerTick: (NSTimer *) sender
+{
+    PseudoTerminal *aTerminal;
+    PTYSession *aSession;
+    NSEnumerator *terminalEnumerator, *sessionEnumerator;
+
+    terminalEnumerator = [[self terminals] objectEnumerator];
+
+    // call periodic code in each session of each terminal
+    while ((aTerminal = [terminalEnumerator nextObject]) != nil)
+    {
+	sessionEnumerator = [[aTerminal sessions] objectEnumerator];
+	while ((aSession = [sessionEnumerator nextObject]) != nil)
+	    [aSession timerTick: sender];
+    }
+        
 }
 
 // Action methods
